Fix bugs draft
